2002-11-05  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-config.c: avoid "no DTD" message from libxml.

2002-11-01  Cleber Rodrigues <cleber@gnome-db.org>

	* providers/mysql/gda-mysql-provider.c: added missing mysql_init()
	on the initialization of the connection structure.

2002-10-29  Holger Thon <holger.thon@gnome-db.org>

	* providers/freetds/gda-freetds-provider.c (get_schema):
	users schema fixed

2002-10-29  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libsql/parser.y: a couple of fixes to make bison not to complain.

2002-10-28  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #96810

	* providers/oracle/gda-oracle-provider.c (get_oracle_tables):
	separated retrieval of table schema, and added all missing fields.

	* providers/mysql/gda-mysql-provider.c (get_mysql_tables): set column
	titles on the data model being created.

2002-10-28  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #95985

	* configure.in: libmystrings is not needed for MySQL provider.

2002-10-25  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #96758
	
	* libgda/Makefile.am: moved top_srcdir to the top in INCLUDES.

2002-10-23  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 0.8.199

2002-10-23  Holger Thon <holger.thon@gnome-db.org>

	* providers/freetds/gda-freetds-provider.c:
	fixed dlopen() bug which made loading the provider fail with freetds
	0.6x

	* configure.in: Removed freetds v0.60 warning

2002-10-16  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/interbase/Makefile.am:
	* providers/interbase/gda-interbase-provider.[ch]:
	* providers/interbase/libmain.c: started GNOME 2 version of the
	Interbase provider.

	* providers/gda-oracle-provider.c (gda_oracle_provider_get_version):
	(gda_oracle_provider_get_server_version): implemented missing methods.

2002-10-13  Holger Thon <holger.thon@gnome-db.org>

	* providers/freetds/gda-freetds-provider.h: added TDS_CONTEXT (v0.60)
	to GdaFreeTDSConnectionData struct
	